--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Ember Starter Kit</title>
+<title>Gherkin Magnets</title>
   <link rel="stylesheet" href="stylesheets/app.css">
 </head>
 <body>
