Updated styles and added other magnet groups

--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
           </ul>
         </div>
 
-        <a href="#" class="scenario-new button">New Scenario</a>
+        <a href="#" class="scenario-new button right">New Scenario</a>
       </article>
+
       <div class="feature-output row">
         <h2>The Results</h2>
         <textarea name="" id="" cols="30" rows="10"></textarea>
@@ -64,8 +65,24 @@
       <div id="givens" class="magnet-section row collapse">
         <h2 class="magnet-section-title large-12 columns">Given</h2>
         <ul class="magnet-list large-12 columns">
-          <li class="magnet given">Given a user exists</li>
-          <li class="magnet given">Given I am on <input type="text" placeholder="[page_name]"></li>
+          <li class="magnet given">Given a user exists<span></span></li>
+          <li class="magnet given">Given I am on <input type="text" placeholder="[page_name]"><span></span></li>
+        </ul>
+      </div>
+
+      <div id="whens" class="magnet-section row collapse">
+        <h2 class="magnet-section-title large-12 columns">When</h2>
+        <ul class="magnet-list large-12 columns">
+          <li class="magnet when">Given a user exists<span></span></li>
+          <li class="magnet when">Given I am on <input type="text" placeholder="[page_name]"><span></span></li>
+        </ul>
+      </div>
+
+      <div id="thens" class="magnet-section row collapse">
+        <h2 class="magnet-section-title large-12 columns">Then</h2>
+        <ul class="magnet-list large-12 columns">
+          <li class="magnet then">Given a user exists<span></span></li>
+          <li class="magnet then">Given I am on <input type="text" placeholder="[page_name]"><span></span></li>
         </ul>
       </div>
     </section>
