More style updates

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <input type="text" placeholder="[scenario_name]">
           </h3>
           <ul class="scenario-description">
-            <li class="magnet given">Given a user exists</li>
+            <li class="magnet given">Given a user exists <span><img src="images/delete-icon.png" alt=""></span></li>
           </ul>
         </div>
 
