Added the Gherkin Magnet logo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <header id="header" class="row">
     <div class="identity large-12 columns">
-      <h1>Gherkin Magnets</h1>
+      <h1><img src="images/gherkin-magnets-logo.png" alt=""> Gherkin Magnets</h1>
     </div>
   </header>
   
