--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
   <script src="javascripts/libs/jquery-1.9.1.js"></script>
   <script src="javascripts/libs/handlebars-1.0.0-rc.3.js"></script>
   <script src="javascripts/libs/ember-1.0.0-rc.3.js"></script>
+  <script src="javascripts/libs/jquery-ui-1.10.3.custom.js"></script>  
+  <script src="javascripts/libs/jquery-ui.nestedSortable.js"></script>
   <script src="javascripts/app.js"></script>
 
 </body>
