--- a/index.html
+++ b/index.html
@@ -5,17 +5,7 @@
 <title>Gherkin Magnets</title>
   <link rel="stylesheet" href="stylesheets/app.css">
 </head>
-<body>
-
-  <script type="text/x-handlebars">
-    
-
-    {{outlet}}
-  </script>
-
-  <script type="text/x-handlebars" data-template-name="index">
-    
-  </script>
+<body> 
 
   <header id="header" class="row">
     <div class="identity large-12 columns">
@@ -43,8 +33,16 @@
             Scenario:&nbsp;
             <input type="text" placeholder="[scenario_name]">
           </h3>
-          <ul class="scenario-description">
-            <li class="magnet given">Given a user exists <span><img src="images/delete-icon.png" alt=""></span></li>
+          <ul class="scenario-steps connected-sortable nested-sortable">
+          </ul>
+        </div>
+
+        <div id="scenario-template" class="scenario large-12 columns">
+          <h3 class="scenario-name">
+            Scenario:&nbsp;
+            <input type="text" placeholder="[scenario_name]">
+          </h3>
+          <ul class="scenario-steps connected-sortable nested-sortable">
           </ul>
         </div>
 
@@ -64,15 +62,15 @@
     <section id="magnets" class="large-3 columns">
       <div id="givens" class="magnet-section row collapse">
         <h2 class="magnet-section-title large-12 columns">Given</h2>
-        <ul class="magnet-list large-12 columns">
-          <li class="magnet given">Given a user exists<span></span></li>
+        <ul class="magnet-list large-12 columns connected-sortable">
+          <li class="magnet given">Given a user exists<span><img class="remove-magnet" src="images/delete-icon.png" alt=""></span></li>
           <li class="magnet given">Given I am on <input type="text" placeholder="[page_name]"><span></span></li>
         </ul>
       </div>
 
       <div id="whens" class="magnet-section row collapse">
         <h2 class="magnet-section-title large-12 columns">When</h2>
-        <ul class="magnet-list large-12 columns">
+        <ul class="magnet-list large-12 columns connected-sortable">
           <li class="magnet when">Given a user exists<span></span></li>
           <li class="magnet when">Given I am on <input type="text" placeholder="[page_name]"><span></span></li>
         </ul>
@@ -80,7 +78,7 @@
 
       <div id="thens" class="magnet-section row collapse">
         <h2 class="magnet-section-title large-12 columns">Then</h2>
-        <ul class="magnet-list large-12 columns">
+        <ul class="magnet-list large-12 columns connected-sortable">
           <li class="magnet then">Given a user exists<span></span></li>
           <li class="magnet then">Given I am on <input type="text" placeholder="[page_name]"><span></span></li>
         </ul>
@@ -89,11 +87,9 @@
   </div>
 
   <script src="javascripts/libs/jquery-1.9.1.js"></script>
-  <script src="javascripts/libs/handlebars-1.0.0-rc.3.js"></script>
-  <script src="javascripts/libs/ember-1.0.0-rc.3.js"></script>
   <script src="javascripts/libs/jquery-ui-1.10.3.custom.js"></script>  
   <script src="javascripts/libs/jquery-ui.nestedSortable.js"></script>
-  <script src="javascripts/app.js"></script>
+  <script src="javascripts/scripts.js"></script>
 
 </body>
 </html>
