Simply model attributes and updated views

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
               {{view Ember.TextField valueBinding="title" placeholder="[feature_name]"}}
             </h2>
             <div class="feature-description large-12 columns">
-              <p>In order to {{view Ember.TextField valueBinding="storyGoal" placeholder="[goal]"}}</p>
-              <p>As a/an {{view Ember.TextField valueBinding="storyStakeholder" placeholder="[stakeholder]"}}</p>
-              <p>I want {{view Ember.TextField valueBinding="storyBehavior" placeholder="[behavior]"}}</p>
+              <p>In order to {{view Ember.TextField valueBinding="goal" placeholder="[goal]"}}</p>
+              <p>As a/an {{view Ember.TextField valueBinding="stakeholder" placeholder="[stakeholder]"}}</p>
+              <p>I want {{view Ember.TextField valueBinding="behavior" placeholder="[behavior]"}}</p>
             </div>
           </header>
         </article>
