--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
   <script src="javascripts/libs/jquery-1.9.1.js"></script>
   <script src="javascripts/libs/handlebars-1.0.0-rc.4.js"></script>
   <script src="javascripts/libs/ember-1.0.0-rc.6.1.js"></script>
-   <script src="javascripts/libs/ember-data.js"></script>
+   <script src="javascripts/libs/ember-data-0.13.js"></script>
   <script src="javascripts/app.js"></script>
 
   <script src="javascripts/libs/jquery-ui-1.10.3.custom.js"></script>  
